# Django_weather_project

./: .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  goal.txt  pyproject.toml
.github/workflows/: django.yml
mysite/mysite/: settings.py  urls.py
mysite/weather_site/: apps.py  models.py  urls.py  views.py
mysite/weather_site/migrations/: 0001_initial.py  0002_remove_city_country_remove_city_latitude_and_more.py  0003_city_data_delete_weatherdata.py  0004_alter_city_data_alter_city_place_id.py
mysite/weather_site/templates/weather_site/: base.html  init.html  login.html  registration.html  signup.html  weather_data.html  weather_forecast.html
