[project]
name = "dgango-weather-project"
version = "0.1.0"
description = "Django pet project"
authors = [
    {name = "Artur_Lazarevich",email = "compact_00@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.16.1,<2.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "django (>=5.2.3,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
